# agent-runner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.sandbox  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_server.cmd
scripts/: Dockerfile.fc-builder  agent_worker.py  build_rootfs.sh  fc_agent.py
src/agent_runner/: agents.py  main.py  models.py  utils.py  vm_pool.py  worker.py
tests/: test_core.py
